--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "scripts": {
     "test": "jest",
-    "prettier": "prettier --plugin=. --parser=lua51"
+    "prettier": "prettier --plugin=. --parser=lua"
   },
   "jest": {
     "projects": ["<rootDir>/jest.*.config.js"]
