Use prettier from npm to run tests
But use prettier from github to do the run_spec stuff

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "main": "src",
   "files": ["src"],
   "dependencies": {
-    "luaparse": "0.2.1",
-    "prettier": "prettier/prettier#4c464133ac37a966c792cacc660853d74c776841"
+    "luaparse": "0.2.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
@@ -18,7 +17,13 @@
     "eslint-plugin-import": "2.10.0",
     "eslint-plugin-prettier": "2.6.0",
     "jest": "22.4.3",
-    "jest-runner-eslint": "0.4.0"
+    "jest-runner-eslint": "0.4.0",
+    "prettier-from-github":
+      "prettier/prettier#4c464133ac37a966c792cacc660853d74c776841",
+    "prettier": "1.13.7"
+  },
+  "peerDependencies": {
+    "prettier": ">=1.0.0"
   },
   "scripts": {
     "test": "cross-env AST_COMPARE=1 jest",
