--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^24.9.0",
     "jest-runner-eslint": "0.9.0",
-    "prettier": "1.19.1"
+    "prettier": "^2.1.1"
   },
   "peerDependencies": {
-    "prettier": ">=1.15.0"
+    "prettier": ">=2.0.0"
   },
   "scripts": {
     "test": "cross-env AST_COMPARE=1 jest",
