--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Suchipi <me@suchipi.com>",
   "license": "MIT",
   "main": "src",
+  "engines": {
+    "node": ">=10.13.0"
+  },
   "files": [
     "src"
   ],
@@ -13,13 +16,13 @@
     "luaparse": "0.2.1"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "eslint": "5.16.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.7.0",
     "eslint-config-unobtrusive": "^1.2.5",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^24.9.0",
-    "jest-runner-eslint": "0.9.0",
+    "jest-runner-eslint": "^0.10.0",
     "prettier": "^2.1.1"
   },
   "peerDependencies": {
